--- a/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.qmd
+++ b/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.qmd
@@ -94,6 +94,12 @@ library(gtsummary)
 transition_table <-here_read("transition_table")
 table_baseline <- here_read("table_baseline")
 
+# exposures
+table_exposures <- here_read("table_exposures")
+
+# outcomes
+table_outcomes <- here_read("table_outcomes")
+
 
 # n participants
 n_participants <-  here_read("n_participants")
@@ -135,36 +141,36 @@ group_tab_att <- here_read("group_tab_att")
 
 
 # Combined 
-sub_title = ""
-N = n_participants
-N
+# sub_title = ""
+# N = n_participants
+# N
 
-plot_group_tab_full <- margot_plot(
-  group_tab_full,
-  type = "RD",
-  title = "+1 year Effect of Loss of Religion on Political Orientation (ATE): N= 47,202",
-  subtitle = sub_title,
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 08,
-  text_size = 3.0,
-  point_size = .5,
-  title_size = 15,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-plot_group_tab_full
-
+# plot_group_tab_full <- margot_plot(
+#   group_tab_full,
+#   type = "RD",
+#   title = "+1 year Effect of Loss of Religion on Political Orientation (ATE): N= 47,202",
+#   subtitle = sub_title,
+#   xlab = "",
+#   ylab = "",
+#   estimate_scale = 1,
+#   base_size = 08,
+#   text_size = 3.0,
+#   point_size = .5,
+#   title_size = 15,
+#   subtitle_size = 11,
+#   legend_text_size = 8,
+#   legend_title_size = 10,
+#   x_offset = -1,
+#   x_lim_lo = -1,
+#   x_lim_hi =  .5
+# )
+# plot_group_tab_full
+here_save(plot_group_tab_full, "plot_group_tab_full")
 
 plot_group_tab_att <- margot_plot(
   group_tab_full,
   type = "RD",
-  title = "+1 year Effect of Loss of Religion on Political Orientation (ATT): N= 17,141",
+  title = "+1 year Effect of Loss of Religion on Political Orientation (ATT): N = 17,141",
   subtitle = sub_title,
   xlab = "",
   ylab = "",
@@ -180,7 +186,9 @@ plot_group_tab_att <- margot_plot(
   x_lim_lo = -1,
   x_lim_hi =  .5
 )
-plot_group_tab_att
+#plot_group_tab_att
+here_save(plot_group_tab_att, "plot_group_tab_att")
+
 #####
 #library(glue)
 
@@ -208,16 +216,18 @@ plot_group_tab_att
 
 ## Introduction
 
-The question of whether religious change affects political change cannot be straightforwardly addressed with cross sectional data.  
+Religious disaffiliation is commonplace. How does religious disaffiliation affect political orientation? This question cannot be straightforwardly addressed with cross sectional data because correlation is not causation. 
 
-Here, to address this question, we develop an outcome-wide longitudinal study using a national longitudinal probability sample in New Zealand. 
+Longitudinal (or "panel") data may help to clarify causation, however, only if certain data and modelling assumptions are satisfied.
+
+Here, we systematically investigate the causal effect of religious disaffiliation by drawing on responses froma national longitudinal probability sample of New Zealanders (New Zealand Attitudes and Values Study, years 2018-2021, N = ```r n_participants`. 
 
 
 ## Method
 
 ### Sample
 
-Data were collected as part of The New Zealand Attitudes and Values Study (NZAVS) is an annual longitudinal national probability panel study of social attitudes, personality, ideology and health outcomes. The NZAVS began in 2009. It includes questionnaire responses from over 72,000 New Zealand residents. The study includes researchers from many New Zealand universities, including the University of Auckland, Victoria University of Wellington, the University of Canterbury, the University of Otago, and Waikato University. Because the survey asks the same people to respond each year, it can track subtle changes in attitudes and values over time and is an important resource for researchers in New Zealand and worldwide. The NZAVS is university-based, not-for-profit and independent of political or corporate funding.https://doi.org/10.17605/OSF.IO/75SNB
+Data were collected as part of The New Zealand Attitudes and Values Study (NZAVS) is an annual longitudinal national probability panel study of social attitudes, personality, ideology and health outcomes. The NZAVS began in 2009. It includes questionnaire responses from over 72,290 New Zealand residents. The study includes researchers from many New Zealand universities, including the University of Auckland, Victoria University of Wellington, the University of Canterbury, the University of Otago, and Waikato University. Because the survey asks the same people to respond each year, it can track subtle changes in attitudes and values over time and is an important resource for researchers in New Zealand and worldwide. The NZAVS is university-based, not-for-profit and independent of political or corporate funding.https://doi.org/10.17605/OSF.IO/75SNB
 
 [Appendix A](#appendix-measures) provides statistical information about the measures used in this study.
 
@@ -1143,9 +1153,9 @@ We asked participants' age in an open-ended question ("What is your age?" or "Wh
 
 Participants were asked "What is your highest level of qualification?". We coded participans highest finished degree according to the New Zealand Qualifications Authority. Ordinal-Rank 0-10 NZREG codes (with overseas school quals coded as Level 3, and all other ancillary categories coded as missing) See:https://www.nzqa.govt.nz/assets/Studying-in-NZ/New-Zealand-Qualification-Framework/requirements-nzqf.pdf
 
-<!-- #### Employment (waves: 1-3, 4-11) -->
+#### Employment (waves: 1-3, 4-11)
 
-<!-- We asked participants "Are you currently employed? (This includes self-employed or casual work)". \* note: This question disappeared in the updated NZAVS Technical documents (Data Dictionary). -->
+We asked participants "Are you currently employed? (This includes self-employed or casual work)". \* note: This question disappeared in the updated NZAVS Technical documents (Data Dictionary).
 
 <!-- #### European (waves: 1-15) -->
 
@@ -1207,68 +1217,68 @@ We coded whether they are living in an urban or rural area (1 = Urban, 0 = Rural
 
 We used the NZ Deprivation Index to assign each participant a score based on where they live [@atkinson2019]. This score combines data such as income, home ownership, employment, qualifications, family structure, housing, and access to transport and communication for an area into one deprivation score.
 
-<!-- #### NZ-Born (waves: 1-2,4-15) -->
+#### NZ-Born (waves: 1-2,4-15)
 
-<!-- We asked participants "Which country were you born in?" or "Where were you born? (please be specific, e.g., which town/city?)" (waves: 6-15). -->
+We asked participants "Which country were you born in?" or "Where were you born? (please be specific, e.g., which town/city?)" (waves: 6-15).
 
-<!-- #### Mini-IPIP 6 (waves: 1-3,4-15) -->
+#### Mini-IPIP 6 (waves: 1-3,4-15)
 
-<!-- We measured participants' personality with the Mini International Personality Item Pool 6 (Mini-IPIP6) [@sibley2011] which consists of six dimensions and each dimension is measured with four items: -->
+We measured participants' personality with the Mini International Personality Item Pool 6 (Mini-IPIP6) [@sibley2011] which consists of six dimensions and each dimension is measured with four items:
 
-<!-- 1.  agreeableness, -->
+1.  agreeableness,
 
-<!--     i.  I sympathize with others' feelings. -->
-<!--     ii. I am not interested in other people's problems. (r) -->
-<!--     iii. I feel others' emotions. -->
-<!--     iv. I am not really interested in others. (r) -->
+    i.  I sympathize with others' feelings.
+    ii. I am not interested in other people's problems. (r)
+    iii. I feel others' emotions.
+    iv. I am not really interested in others. (r)
 
-<!-- 2.  conscientiousness, -->
+2.  conscientiousness,
 
-<!--     i.  I get chores done right away. -->
-<!--     ii. I like order. -->
-<!--     iii. I make a mess of things. (r) -->
-<!--     iv. I ften forget to put things back in their proper place. (r) -->
+    i.  I get chores done right away.
+    ii. I like order.
+    iii. I make a mess of things. (r)
+    iv. I ften forget to put things back in their proper place. (r)
 
-<!-- 3.  extraversion, -->
+3.  extraversion,
 
-<!--     i.  I am the life of the party. -->
-<!--     ii. I don't talk a lot. (r) -->
-<!--     iii. I keep in the background. (r) -->
-<!--     iv. I talk to a lot of different people at parties. -->
+    i.  I am the life of the party.
+    ii. I don't talk a lot. (r)
+    iii. I keep in the background. (r)
+    iv. I talk to a lot of different people at parties.
 
-<!-- 4.  honesty-humility, -->
+4.  honesty-humility,
 
-<!--     i.  I feel entitled to more of everything. (r) -->
-<!--     ii. I deserve more things in life. (r) -->
-<!--     iii. I would like to be seen driving around in a very expensive car. (r) -->
-<!--     iv. I would get a lot of pleasure from owning expensive luxury goods. (r) -->
+    i.  I feel entitled to more of everything. (r)
+    ii. I deserve more things in life. (r)
+    iii. I would like to be seen driving around in a very expensive car. (r)
+    iv. I would get a lot of pleasure from owning expensive luxury goods. (r)
 
-<!-- 5.  neuroticism, and -->
+5.  neuroticism, and
 
-<!--     i.  I have frequent mood swings. -->
-<!--     ii. I am relaxed most of the time. (r) -->
-<!--     iii. I get upset easily. -->
-<!--     iv. I seldom feel blue. (r) -->
+    i.  I have frequent mood swings.
+    ii. I am relaxed most of the time. (r)
+    iii. I get upset easily.
+    iv. I seldom feel blue. (r)
 
-<!-- 6.  openness to experience -->
+6.  openness to experience
 
-<!--     i.  I have a vivid imagination. -->
-<!--     ii. I have difficulty understanding abstract ideas. (r) -->
-<!--     iii. I do not have a good imagination. (r) -->
-<!--     iv. I am not interested in abstract ideas. (r) -->
+    i.  I have a vivid imagination.
+    ii. I have difficulty understanding abstract ideas. (r)
+    iii. I do not have a good imagination. (r)
+    iv. I am not interested in abstract ideas. (r)
 
-<!-- Each dimension was assessed with four items and participants rated the accuracy of each item as it applies to them from 1 (Very Inaccurate) to 7 (Very Accurate). Items marked with (r) are reverse coded. -->
+Each dimension was assessed with four items and participants rated the accuracy of each item as it applies to them from 1 (Very Inaccurate) to 7 (Very Accurate). Items marked with (r) are reverse coded.
 
-<!-- #### Honesty-Humility-Modesty Facet (waves: 10-14) -->
+#### Honesty-Humility-Modesty Facet (waves: 10-14)
 
-<!-- Participants indicated the extent to which they agree with the following four statements from @campbell2004 , and @sibley2011 (1 = Strongly Disagree to 7 = Strongly Agree) -->
+Participants indicated the extent to which they agree with the following four statements from @campbell2004 , and @sibley2011 (1 = Strongly Disagree to 7 = Strongly Agree)
 
-<!-- ```          -->
-<!-- i.  I want people to know that I am an important person of high status, (Waves: 1, 10-14) -->
-<!-- ii. I am an ordinary person who is no better than others. -->
-<!-- iii. I wouldn't want people to treat me as though I were superior to them. -->
-<!-- iv. I think that I am entitled to more respect than the average person is. -->
-<!-- ``` -->
+```
+i.  I want people to know that I am an important person of high status, (Waves: 1, 10-14)
+ii. I am an ordinary person who is no better than others.
+iii. I wouldn't want people to treat me as though I were superior to them.
+iv. I think that I am entitled to more respect than the average person is.
+```
 
 
 ## Appendix B. Baseline Demographic Statistics {#appendix-demographics}
@@ -1281,52 +1291,133 @@ We used the NZ Deprivation Index to assign each participant a score based on whe
 #| echo: false
 #| include: false
 
-#table_demography <- readRDS(here::here(push_mods_psychopathy_combined, "table_demography"))
-#table_demography |>  kbl(format = "markdown")
+table_baseline <- read_here("table_baseline")
+#table_baseline |>  kbl(format = "markdown")
 
 ```
 
 
-
-|**Baseline Variables**                                                    |**N = 1,070**     |
-|:-------------------------------------------------------------------------|:-----------------|
-|__Age__                                                                   |55 (45, 61)       |
-|__Education Level Coarsen__                                               |NA                |
-|1                                                                         |15 (1.4%)         |
-|2                                                                         |306 (29%)         |
-|3                                                                         |125 (12%)         |
-|4                                                                         |304 (29%)         |
-|5                                                                         |138 (13%)         |
-|6                                                                         |129 (12%)         |
-|7                                                                         |46 (4.3%)         |
-|__Eth Cat__                                                               |NA                |
-|1                                                                         |922 (86%)         |
-|2                                                                         |78 (7.3%)         |
-|3                                                                         |25 (2.3%)         |
-|4                                                                         |41 (3.8%)         |
-|__Hours Housework log__                                                   |2.20 (1.61, 2.71) |
-|__Hours Work log__                                                        |3.58 (1.95, 3.78) |
-|__Kessler Latent Anxiety__                                                |1.00 (0.67, 1.67) |
-|__Kessler Latent Depression__                                             |0.33 (0.00, 0.67) |
-|__Kessler6 Sum__                                                          |4 (2, 7)          |
-|__Male__                                                                  |552 (52%)         |
-|__Nz Dep2018__                                                            |4.00 (2.00, 6.00) |
-|__How many children have you given birth to, fathered, and/or parented?__ |813 (76%)         |
-|__Political Conservative__                                                |NA                |
-|1                                                                         |63 (6.2%)         |
-|2                                                                         |251 (25%)         |
-|3                                                                         |238 (23%)         |
-|4                                                                         |233 (23%)         |
-|5                                                                         |146 (14%)         |
-|6                                                                         |73 (7.1%)         |
-|7                                                                         |19 (1.9%)         |
-|__Religion Church Coarsen__                                               |NA                |
-|zero                                                                      |866 (83%)         |
-|one                                                                       |29 (2.8%)         |
-|less_four                                                                 |56 (5.3%)         |
-|four_up                                                                   |98 (9.3%)         |
-|__Urban__                                                                 |867 (81%)         |
-
+|**Demographic Variables**            |**N = 47,202** |
+|:------------------------------------|:--------------|
+|__Age__                              |NA             |
+|Mean (SD)                            |49 (14)        |
+|Range                                |18, 99         |
+|IQR                                  |39, 60         |
+|__Agreeableness__                    |NA             |
+|Mean (SD)                            |5.35 (0.99)    |
+|Range                                |1.00, 7.00     |
+|IQR                                  |4.75, 6.00     |
+|__Belong__                           |NA             |
+|Mean (SD)                            |5.14 (1.08)    |
+|Range                                |1.00, 7.00     |
+|IQR                                  |4.33, 6.00     |
+|__Belong Beliefs__                   |NA             |
+|1                                    |794 (1.7%)     |
+|2                                    |2,011 (4.3%)   |
+|3                                    |4,273 (9.2%)   |
+|4                                    |11,673 (25%)   |
+|5                                    |13,505 (29%)   |
+|6                                    |11,659 (25%)   |
+|7                                    |2,769 (5.9%)   |
+|__Born NZ__                          |36,834 (78%)   |
+|__Charity Donate log__               |NA             |
+|Mean (SD)                            |1.16 (1.61)    |
+|Range                                |0.00, 5.13     |
+|IQR                                  |0.00, 2.40     |
+|__Conscientiousness__                |NA             |
+|Mean (SD)                            |5.11 (1.06)    |
+|Range                                |1.00, 7.00     |
+|IQR                                  |4.50, 6.00     |
+|__Education Level Coarsen__          |NA             |
+|no_qualification                     |1,217 (2.6%)   |
+|cert_1_to_4                          |16,581 (36%)   |
+|cert_5_to_6                          |5,941 (13%)    |
+|university                           |12,510 (27%)   |
+|post_grad                            |5,099 (11%)    |
+|masters                              |3,901 (8.4%)   |
+|doctorate                            |1,120 (2.4%)   |
+|__Employed__                         |37,497 (80%)   |
+|__Eth Cat__                          |NA             |
+|Euro                                 |37,660 (81%)   |
+|Maori                                |5,345 (11%)    |
+|Pacific                              |1,108 (2.4%)   |
+|Asian                                |2,466 (5.3%)   |
+|__Extraversion__                     |NA             |
+|Mean (SD)                            |3.91 (1.20)    |
+|Range                                |1.00, 7.00     |
+|IQR                                  |3.00, 4.75     |
+|__Has Siblings__                     |44,081 (95%)   |
+|__Hlth Bmi__                         |NA             |
+|Mean (SD)                            |27.2 (5.9)     |
+|Range                                |12.3, 73.6     |
+|IQR                                  |23.2, 30.1     |
+|__Honesty Humility__                 |NA             |
+|Mean (SD)                            |5.41 (1.18)    |
+|Range                                |1.00, 7.00     |
+|IQR                                  |4.75, 6.25     |
+|__Hours Charity log__                |NA             |
+|Mean (SD)                            |0.43 (0.78)    |
+|Range                                |0.00, 4.62     |
+|IQR                                  |0.00, 0.69     |
+|__Hours Children log__               |NA             |
+|Mean (SD)                            |4.57 (2.50)    |
+|Range                                |0.00, 13.12    |
+|IQR                                  |3.26, 6.22     |
+|__Hours Exercise log__               |NA             |
+|Mean (SD)                            |1.54 (0.85)    |
+|Range                                |0.00, 4.39     |
+|IQR                                  |1.10, 2.08     |
+|__Hours Housework log__              |NA             |
+|Mean (SD)                            |2.14 (0.78)    |
+|Range                                |0.00, 5.13     |
+|IQR                                  |1.70, 2.71     |
+|__Hours Work log__                   |NA             |
+|Mean (SD)                            |2.66 (1.58)    |
+|Range                                |0.00, 4.62     |
+|IQR                                  |1.39, 3.71     |
+|__Household Inc log__                |NA             |
+|Mean (SD)                            |11.39 (0.77)   |
+|Range                                |0.69, 14.92    |
+|IQR                                  |11.00, 11.92   |
+|__Male__                             |29,744 (63%)   |
+|__Neighbourhood Community__          |NA             |
+|1                                    |2,973 (6.3%)   |
+|2                                    |5,877 (13%)    |
+|3                                    |6,927 (15%)    |
+|4                                    |9,734 (21%)    |
+|5                                    |9,773 (21%)    |
+|6                                    |7,949 (17%)    |
+|7                                    |3,712 (7.9%)   |
+|__Neuroticism__                      |NA             |
+|Mean (SD)                            |3.49 (1.15)    |
+|Range                                |1.00, 7.00     |
+|IQR                                  |2.75, 4.25     |
+|__NZ Dep2018__                       |NA             |
+|Mean (SD)                            |4.77 (2.73)    |
+|Range                                |1.00, 10.00    |
+|IQR                                  |2.00, 7.00     |
+|__Nzsei 13 l__                       |NA             |
+|Mean (SD)                            |54 (17)        |
+|Range                                |10, 90         |
+|IQR                                  |41, 69         |
+|__Openness__                         |NA             |
+|Mean (SD)                            |4.96 (1.12)    |
+|Range                                |1.00, 7.00     |
+|IQR                                  |4.25, 5.75     |
+|__Parent__                           |33,444 (71%)   |
+|__Partner__                          |34,660 (75%)   |
+|__Rural Gch 2018 l__                 |NA             |
+|1                                    |29,050 (62%)   |
+|2                                    |8,851 (19%)    |
+|3                                    |5,779 (12%)    |
+|4                                    |2,647 (5.6%)   |
+|5                                    |569 (1.2%)     |
+|__Sample Frame Opt in__              |1,379 (2.9%)   |
+|__Support__                          |NA             |
+|Mean (SD)                            |5.95 (1.12)    |
+|Range                                |1.00, 7.00     |
+|IQR                                  |5.33, 7.00     |
+|__Urban__                            |37,901 (81%)   |
 : Baseline demography statistics {#tbl-table-demography}
 
 
@@ -1344,38 +1435,30 @@ We used the NZ Deprivation Index to assign each participant a score based on whe
 #| eval: false
 #| echo: false
 #| include: false
-#table_exposures <- readRDS(here::here(push_mods_psychopathy_combined, "table_exposures"))
+table_exposures <- here_read("table_exposures")
 
 #table_exposures |>  kbl(format = "markdown")
-
 ```
 
 
-|**Baseline/Outcome Variables** |**2018**, N = 1,070 |**2019**, N = 1,070 |
-|:------------------------------|:-------------------|:-------------------|
-|__Aaron Antagonism__           |4.33 (4.00, 4.67)   |4.33 (3.88, 4.67)   |
-|Unknown                        |0                   |0                   |
-|__Aaron Disinhibition__        |2.17 (1.67, 2.83)   |2.17 (1.67, 2.67)   |
-|Unknown                        |0                   |0                   |
-|__Aaron Emotional Stability__  |5.17 (4.40, 5.83)   |5.17 (4.50, 5.83)   |
-|Unknown                        |0                   |0                   |
-|__Aaron Narcissism__           |2.50 (2.00, 3.00)   |2.50 (2.00, 3.00)   |
-|Unknown                        |0                   |1                   |
-|__Aaron Psychopathy Combined__ |3.54 (3.29, 3.79)   |3.50 (3.29, 3.75)   |
-|Unknown                        |0                   |0                   |
-|__Alert Level Combined__       |NA                  |NA                  |
-|no_alert                       |1,070 (100%)        |831 (78%)           |
-|early_covid                    |0 (0%)              |88 (8.2%)           |
-|alert_level_1                  |0 (0%)              |72 (6.7%)           |
-|alert_level_2                  |0 (0%)              |27 (2.5%)           |
-|alert_level_2_5_3              |0 (0%)              |16 (1.5%)           |
-|alert_level_4                  |0 (0%)              |36 (3.4%)           |
-|Unknown                        |0                   |0                   |
 
-: Baseline demography statistics {#tbl-table-demography}
+|**Baseline/Outcome Variables** |**2018**, N = 47,202 |**2019**, N = 47,202 |
+|:------------------------------|:--------------------|:--------------------|
+|__Alert Level Combined__       |NA                   |NA                   |
+|no_alert                       |47,202 (100%)        |24,761 (71%)         |
+|early_covid                    |0 (0%)               |3,895 (11%)          |
+|alert_level_1                  |0 (0%)               |3,008 (8.7%)         |
+|alert_level_2                  |0 (0%)               |864 (2.5%)           |
+|alert_level_2_5_3              |0 (0%)               |569 (1.6%)           |
+|alert_level_4                  |0 (0%)               |1,646 (4.7%)         |
+|Unknown                        |0                    |12,459               |
+|__Religious Affiliation__      |17,141 (36%)         |11,807 (34%)         |
+|Unknown                        |0                    |12,459               |
+
+: Baseline and Exposure Wave Responses {#tbl-table-exposures}
 
 
-@tbl-table-exposures presents baseline and wave 1 statistics for the exposure variables. Because the exposure wave occurred to New Zealand's COVID-19 pandemic, we all models adjusted for the pandemic alert-level. The pandemic is a not a confounder because a confounder must be related to both the treatment and the outcome. At the end of study measurement, all had be exposed to the pandemic.  However, to satisfy the causal consistency assumption, all treatments must be conditionally equivalent within levels of all covariates [@vanderweele2013]. To better ensure validation of this assumption we therefore included the lead value of covid-alert level in all models.
+@tbl-table-exposures presents baseline (NZAVS time 10) and exposure wave (NZAVS time 11) statistics for the exposure variable: religious affiliation (yes/no). Those who did not provide a response to religious affiliation were coded as "0". Because the treatment wave (NZAVS time 11) occurred to New Zealand's COVID-19 pandemic, we all models adjusted for the pandemic alert-level. The pandemic is a not a "confounder" because a confounder must be related to both the treatment and the outcome. At the end of study measurement, all had be exposed to the pandemic.  However, to satisfy the causal consistency assumption, all treatments must be conditionally equivalent within levels of all covariates [@vanderweele2013]. There is evidence that dangerous natural events may affect religious affliation [@sibley2012]. To better enable conditional independence within levels of the treatment variable, we conditioned on the lead value of COVID-alert level at baseline. To mitigate systematic biases arising from attrition, missingness, `lmtp` package uses inverse probability of censoring weights, which were use when estimating the causal effects of the exposure on the outcome. 
 
 
 
@@ -1389,39 +1472,36 @@ We used the NZ Deprivation Index to assign each participant a score based on whe
 #| eval: false
 #| echo: false
 #| include: false
-table_outcomes <- readRDS(here::here(push_mods_psychopathy_combined, "table_outcomes"))
-#table_outcomes |>  kbl(format = "markdown")
+table_outcomes <- here_read("table_outcomes")
+table_outcomes |>  kbl(format = "markdown")
 
 ```
 
 
 
-|**Baseline/Outcome Variables** |**2018**, N = 1,070 |**2019**, N = 1,070 |
-|:------------------------------|:-------------------|:-------------------|
-|__Aaron Antagonism__           |4.33 (4.00, 4.67)   |4.33 (3.88, 4.67)   |
-|Unknown                        |0                   |0                   |
-|__Aaron Disinhibition__        |2.17 (1.67, 2.83)   |2.17 (1.67, 2.67)   |
-|Unknown                        |0                   |0                   |
-|__Aaron Emotional Stability__  |5.17 (4.40, 5.83)   |5.17 (4.50, 5.83)   |
-|Unknown                        |0                   |0                   |
-|__Aaron Narcissism__           |2.50 (2.00, 3.00)   |2.50 (2.00, 3.00)   |
-|Unknown                        |0                   |1                   |
-|__Aaron Psychopathy Combined__ |3.54 (3.29, 3.79)   |3.50 (3.29, 3.75)   |
-|Unknown                        |0                   |0                   |
-|__Alert Level Combined__       |NA                  |NA                  |
-|no_alert                       |1,070 (100%)        |831 (78%)           |
-|early_covid                    |0 (0%)              |88 (8.2%)           |
-|alert_level_1                  |0 (0%)              |72 (6.7%)           |
-|alert_level_2                  |0 (0%)              |27 (2.5%)           |
-|alert_level_2_5_3              |0 (0%)              |16 (1.5%)           |
-|alert_level_4                  |0 (0%)              |36 (3.4%)           |
-|Unknown                        |0                   |0                   |
+|**Baseline/Outcome Variables** |**N**  |**2018**, N = 47,202 |**2020**, N = 47,202 |
+|:------------------------------|:------|:--------------------|:--------------------|
+|__Political Right Wing__       |74,188 |NA                   |NA                   |
+|1                              |NA     |1,819 (4.1%)         |1,293 (4.3%)         |
+|2                              |NA     |6,736 (15%)          |5,309 (18%)          |
+|3                              |NA     |8,456 (19%)          |6,226 (21%)          |
+|4                              |NA     |16,288 (37%)         |10,033 (33%)         |
+|5                              |NA     |6,812 (15%)          |4,740 (16%)          |
+|6                              |NA     |3,186 (7.2%)         |2,042 (6.8%)         |
+|7                              |NA     |768 (1.7%)           |480 (1.6%)           |
+|Unknown                        |NA     |3,137                |17,079               |
+|__Political Conservative__     |75,180 |NA                   |NA                   |
+|1                              |NA     |2,510 (5.6%)         |1,885 (6.2%)         |
+|2                              |NA     |8,662 (19%)          |6,336 (21%)          |
+|3                              |NA     |8,802 (20%)          |6,576 (21%)          |
+|4                              |NA     |13,866 (31%)         |9,552 (31%)          |
+|5                              |NA     |6,679 (15%)          |4,082 (13%)          |
+|6                              |NA     |3,292 (7.4%)         |1,793 (5.9%)         |
+|7                              |NA     |736 (1.7%)           |409 (1.3%)           |
+|Unknown                        |NA     |2,655                |16,569               |
+: Baseline and Outcome Wave Responses for the Outcome {#tbl-table-outcomes}
 
-: Baseline demography statistics {#tbl-table-exposures}
-
-
-@tbl-table-exposures presents baseline and wave 1 statistics for the exposure variables. Because the exposure wave occurred during New Zealand's COVID-19 pandemic, all models adjusted for the pandemic alert level. The pandemic is not a confounder because a confounder must be related to both the treatment and the outcome. At the end of the study measurement, all had been exposed to the pandemic.  However, to satisfy the causal consistency assumption, all treatments must be conditionally equivalent within levels of all covariates [@vanderweele2013]. To better ensure validation of this assumption, we included the lead value of the covid-alert level in all models.
-
+@tbl-table-outcomes presents baseline and wave 1 statistics for the outcome variables.  We see an overall shift left in levels both of conservativism of right-wing political orientation. Additionally we there 16,569 missing values. To mitigate systematic biases arising from attrition, missingness, `lmtp` package uses inverse probability of censoring weights.  
 
 
 
