--- a/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.qmd
+++ b/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.qmd
@@ -254,7 +254,9 @@ Data were collected as part of The New Zealand Attitudes and Values Study (NZAVS
 
 ### Treatment/Exposure
 
-A hypothetical experiment in which all start as religiously affiliated in the baseline wave and then either: (1) lose religious affiliation in the following wave or (2) retain religious affiliation in the following wave.
+**Study 1 and Study 2**: a hypothetical experiment in which all start as religiously affiliated in the baseline wave and then either: (1) lose religious affiliation in the following wave or (2) retain religious affiliation in the following wave. 
+
+**Study 3**: a hypothetical experiment in which (1) all start as religiously affiliated in the baseline wave and then lose their religious affiliation in the following wave. This treatment is contrasted with a treatment in which all start as religiously disaffiliated and remain religious disaffiliated. 
 
 ### Outcomes
 
@@ -381,7 +383,7 @@ We implemented a 10-fold cross-validation. This method partitions the data into 
 
 #### Sensitivity Analysis Using the E-value
 
-To measure sensitivity to unmeasured confounding, we report VanderWeele and Ding's "E-value" for all analyses [@vanderweele2017]. The E-value quantifies the minimum strength of association (on the risk ratio scale) that an unmeasured confounder would need to have with both the exposure and the outcome (after considering the measured covariates) to explain away the observed exposure-outcome association  [@vanderweele2020; @linden2020EVALUE]. For example, if the E-value were 1.3, it would mean an unmeasured confounder associated with both the treatment and outcome by a risk ratio of 1.3 each (or 30% increase in risk) could explain away the observed effect. Weaker confounding would not suffice. We also report the bound of the E-value closest to 1. If the lower bound of the CI were 1.1, to explain away the result, the strength of an unmeasured confounder in its association with both the treatment and the outcome would need to be at least 1.1 on the risk ratio scale (or a 10% increase in risk) to explain away the result [@vanderweele2017]. 
+To measure sensitivity to unmeasured confounding, we report VanderWeele and Ding's "E-value" for all analyses [@vanderweele2017]. The E-value quantifies the minimum strength of association (on the risk ratio scale) that an unmeasured confounder would need to have with both the exposure and the outcome (after considering the measured covariates) to explain away the observed exposure-outcome association  [@vanderweele2020; @linden2020EVALUE]. 
 
 
 {{< pagebreak >}}
@@ -426,7 +428,11 @@ tab_full |>
 
 The Average Treatment Effect (ATE) represents the expected difference in outcomes between treatment and control groups for the population. Results for the total population are presented in @fig-ate and @tbl-ate. Causal contrasts are given in standardised units for the outcome; the contrasts are therefore interpretable as standardised effect sizes.
 
-For the outcome 'Dis-affiliation Effect: Right Wing', the ATE causal contrast is -0.08. The E-value for this outcome is 1.36; The confidence interval ranges from -0.14 to -0.02. Overall, we find reliable evidence for causality. Religious disaffiliation is expected to cause the disaffiliated to become less right-wing (more politically left-wing).
+For the outcome 'Dis-affiliation Effect: Right Wing', the ATE causal contrast is -0.08. The E-value for this outcome is 1.36; The confidence interval ranges from -0.14 to -0.02. 
+An the E-value of  1.36 means that an unmeasured confounder associated with both the treatment and outcome by a risk ratio of 1.36 each (or 36% increase in risk) could explain away the observed effect, however weaker confounding would not suffice. The lower bound of this sensitivity is  [see @vanderweele2017]. 
+
+
+Overall, we find reliable evidence for causality. Religious disaffiliation is expected to cause the disaffiliated to become less right-wing (more politically left-wing).
 
 For the outcome 'Dis-affiliation Effect: Pol. Conservative’,  the ATE causal contrast is -0.19. The E-value for this outcome is 1.67; The confidence interval ranges from -0.25 to -0.14. We find even more substantial evidence for causality. Religious disaffiliation is expected to cause the disaffiliated to become less politically conservative (more politically liberal).
 
@@ -476,6 +482,49 @@ The Average Treatment Effect (ATT) represents the expected difference in outcome
 For the outcome 'Dis-affiliation Effect (ATT): Right Wing', the ATT causal contrast is -0.07. The E-value for this outcome is 1.32; The confidence interval ranges from -0.12 to -0.01. Overall, we find reliable evidence for causality. Here, in the religious sub-sample, we again find reliable evidence for causality. Religious disaffiliation is expected to cause the disaffiliated to become less right-wing (more politically left-wing).
 
 For the outcome 'Dis-affiliation Effect: Pol.Conservative.', the ATT causal contrast is -0.22. The E-value for this outcome is 1.74; The confidence interval ranges from -0.27 to -0.17. Here, in the religious sub-sample, we again find even stronger evidence for a one-year causal effect on (lower) political conservativism (more liberal).
+
+
+## Study 3 Causal Effect of Religious Disaffiliation on Political Conservativism and Right Wing Orientation  (both outcomes were standardised) contrasted with prevelance effect of consistent disaffiliation
+
+
+```{r}
+#| label: fig-contrast
+#| fig-cap: "Figure describing the effect of disaffiliation on political conservativism and right-wing orientation (both outcomes were standardised) contrasted with the prevalence effect of dissafiliation + 1 year after contrast (ATE)"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-width: 10
+#| fig-height: 6
+
+plot_group_tab_att <- here_read("plot_group_tab_att")
+plot_group_tab_att
+```
+
+
+::: {#tbl-att}
+```{r}
+#| label: tbl-contrast
+#| tbl-cap: "Table describing describing the effect of disaffiliation on political conservativism and right-wing orientation (both outcomes were standardised) contrasted with the prevalence effect of dissafiliation + 1 year after contrast (ATE)"
+#| eval: true
+#| include: false
+#| echo: false
+
+
+tab_contrast <- here_read("tab_contrast")
+
+tab_contrast |>
+  mutate(across(where(is.numeric), ~ round(., 2))) %>%
+  kbl(format = "markdown")
+
+group_tab_contrast <- here_read("group_tab_contrast")
+interpret_table(group_tab_contrast, "causal_difference", "ATE")
+
+```
+:::
+
+
+
+
 
 ## Discussion
 
